@@ -40,6 +40,8 @@ version 2.0.0
 	  defaulted to "Yes".
 	* Removed "Auto-expand contacts" default to "No"
 	* Removed conversation buttons
+	* Removed "Raise conversation window" preferences, default to "no"
+	* Removed "Show alias in tabs/titles," default to "Yes".
 
 version 1.0.2 (10/19/2004):
 	Bug Fixes:
